# moveit_studio_example_behaviors

./: .env  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  behavior_plugin.yaml  example_behaviors_plugin_description.xml  hello_world_plugin_description.xml  package.xml  tree_nodes_model.xml
.github/workflows/: ci.yaml  format.yaml
config/: config.yaml  tree_nodes_model.xml
include/example_behaviors/: add_two_ints_service_client.hpp  delayed_message.hpp  fibonacci_action_client.hpp  get_string_from_topic.hpp  hello_world.hpp  publish_color_rgba.hpp  setup_mtc_pick_from_pose.hpp  setup_mtc_place_from_pose.hpp  setup_mtc_wave_hand.hpp
include/hello_world/: delayed_message.hpp  hello_world.hpp  setup_mtc_wave_hand.hpp
include/image_behaviors/: blackboard_image_to_file.hpp  image_to_blackboard.hpp  save_image_to_file.hpp
objectives/: mtc_pick_and_place.xml  pick_and_place_example.xml
src/: add_two_ints_service_client.cpp  blackboard_image_to_file.cpp  delayed_message.cpp  fibonacci_action_client.cpp  get_string_from_topic.cpp  hello_world.cpp  image_to_blackboard.cpp  publish_color_rgba.cpp  register_behaviors.cpp  save_image_to_file.cpp  setup_mtc_pick_from_pose.cpp  setup_mtc_place_from_pose.cpp  setup_mtc_wave_hand.cpp  tree_nodes_model.xml
test/: CMakeLists.txt  test_behavior_plugins.cpp  test_image_behaviors.cpp
